# nittany_market

./: .gitignore  README.md  dune-project  graphql_schema.json  nittany_market.opam  nmcli  update_schema
cli/: dune
data/: Address.csv  Buyers.csv  Categories.csv  Credit_Cards.csv  Local_Vendors.csv  Orders.csv  Product_Listing.csv  Ratings.csv  Reviews.csv  Sellers.csv  Users.csv  Zipcode_Info.csv
frontend/: account.ml  browse.ml  change_password.ml  dune  effect_lwt.ml  graphql_loader.ml  graphql_loader.mli  home.ml  login.ml  main.ml  mutate_product.ml  my_listings.ml  nav.ml  route.ml  route.mli  templates.ml  util.ml  view_product.ml
frontend/graphql/: client.ml  client.mli  dune  queries.ml
lib/: csv.ml  dune  hasher.ml  migrations.ml  router.ml
lib/auth/: dune  hasher.ml
lib/csv/: csv_util.ml  dune
lib/graphql/: dune  exn.ml  schema.ml  util.ml
lib/models/: address.ml  address.mli  buyer.ml  buyer.mli  category.ml  category.mli  creditcard.ml  creditcard.mli  dune  localvendor.ml  localvendor.mli  model_intf.ml  order.ml  order.mli  productlisting.ml  productlisting.mli  rating.ml  rating.mli  review.ml  review.mli  seller.ml  seller.mli  user.ml  user.mli  zipcodeinfo.ml  zipcodeinfo.mli
lib/views/: dune  error.ml  index.ml  login.ml  logout.ml  util.ml
templates/: base.jinja  error.jinja  index.jinja
test/: dune
